refactor(space): add join rule to space child info

--- a/matrix-sdk-android/build.gradle
+++ b/matrix-sdk-android/build.gradle
@@ -98,6 +98,10 @@ android {
         }
     }
 
+    lintOptions {
+        disable "MissingTranslation"
+    }
+
     adbOptions {
         installOptions "-g"
 //        timeOutInMs 350 * 1000
